fix: hero agent clipping with text

--- a/css/index.css
+++ b/css/index.css
@@ -45,7 +45,7 @@
 #header-agent {
   position: absolute;
   z-index: 0;
-  right: -32px;
+  right: -96px;
   bottom: -140px;
 }
 
@@ -66,6 +66,7 @@
   height: fit-content;
   width: fit-content;
   margin-left: var(--spacingMedium);
+  z-index: 10;
 }
 
 #hero .section-content img {
